# drupal-devops-copilot

./: .ci-touch  .dockerignore  .env.compose  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.images.yml  docker-compose.yml  pyproject.toml  requirements.txt  run-copilot.sh
.copilot_debug/: manifest_raw.txt  manifest_repaired.json
.github/: CODEOWNERS
.github/workflows/: docker-publish.yml  publish-ghcr.yml  publish.yml
copilot/: __init__.py  drush.py  git.py  gitlab_ext.py  guards.py  jira.py  jira_ext.py  observability.py  task_runner.py
copilot/agents/: __init__.py  acceptance.py  code_author_agent.py  code_review_agent.py  deploy_agent.py  plan_preview.py  prompt_builder.py  workflow_agent.py
copilot/ai/: __init__.py  ai_generator.py  llm.py
copilot/cli/: __init__.py  ai_dev_task.py  ai_review_and_merge.py  auto_dev.py  deploy.py  one_shot.py  qa_on_ec2.py  qa_verify_and_transition.py  (+3 more)
docker/: api.Dockerfile  cli.Dockerfile  entrypoint.api.sh  web.Dockerfile
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  architecture.md  cli-reference.md  configuration.md  dev-setup.md  docker-dev.md  docker-quickstart.md  flow-overview.md  ollama-tips.md  quickstart.md  troubleshooting.md
runtime/: audit.log.jsonl
scripts/: deploy_to_ec2.sh  run_task.py
server/: __init__.py  a_ec2.py  alembic.ini  app.py  app_run.py  crud.py  db.py  deploy_ec2.py  main.py  models.py  schemas.py  settings.py
tests/: test_prompt_engine.py
ui/: next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
(+75 files in other folders)
